--- a/main/sobre.html
+++ b/main/sobre.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Título -->
-    <title>Principal</title>
+    <title>Sobre</title>
 </head>
 
 <style>
@@ -47,13 +47,13 @@
 </style>
 </head>
 
+
 <!-- Logo/Navbar -->
 <div class="topnav">
-    <a class="active" href="index.html">Início</a>
+    <a href="index.html">Início</a>
     <a href="formulario.html">Formulário</a>
     <a href="informacao.html">Informações</a>
-    <a href="sobre.html">Sobre</a>
+    <a class="active" href="sobre.html">Sobre</a>
 </div>
-
 
 </html>
