--- a/main/formulario.html
+++ b/main/formulario.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <!-- Meta dados -->
     <meta charset="UTF-8">
@@ -13,7 +14,46 @@
     <!-- Título -->
     <title>Formulário</title>
 </head>
-<body>
-    hello world
-</body>
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .topnav {
+        overflow: hidden;
+        background-color: #333;
+    }
+
+    .topnav a {
+        float: left;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+    }
+
+    .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    .topnav a.active {
+        background-color: #4CAF50;
+        color: white;
+    }
+</style>
+</head>
+
+
+<!-- Logo/Navbar -->
+<div class="topnav">
+    <a href="index.html">Início</a>
+    <a class="active" href="formulario.html">Formulário</a>
+    <a href="informacao.html">Informações</a>
+    <a href="sobre.html">Sobre</a>
+</div>
+
+
 </html>
