--- a/main/sobre.html
+++ b/main/sobre.html
@@ -44,6 +44,22 @@
         background-color: #4CAF50;
         color: white;
     }
+    input[type=search] {
+  width: 130px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: white;
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 20px;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=search]:focus {
+  width: 10%;
+}
 </style>
 </head>
 
@@ -54,6 +70,9 @@
     <a href="formulario.html">Formulário</a>
     <a href="informacao.html">Informações</a>
     <a class="active" href="sobre.html">Sobre</a>
+    <form>
+        <input type="search" name="search" placeholder="Pesquisar..">
+      </form>
 </div>
 
 </html>
