--- a/main/index.html
+++ b/main/index.html
@@ -7,30 +7,201 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Referências -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="/main/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/main/css/album.css" rel="stylesheet">
+    <link href="/main/css/carousel.css" rel="stylesheet">
+    <link href="/main/css/blog.css" rel="stylesheet">
     <!-- Título -->
-    <title>Principal</title>
+    <title>Blog Unifor</title>
+    <link rel="shortcut icon" href="/main/images/unifor-favicon.png" />
 </head>
 
 <body>
-    <!-- Logo/Navbar -->
-    <div class="topnav">
-        <div class="logo">
-            <a class="unif"> <img src="imagens/unifor-logo.png" width="50%"> </a>
-        </div>
-        <a class="active" href="index.html">Início</a>
-        <a href="formulario.html">Formulário</a>
-        <a href="informacao.html">Informações</a>
-        <a href="sobre.html">Sobre</a>
-        <form>
-            <input type="search" name="search" placeholder="Pesquisar..">
-        </form>
-    </div>
+    <!-- Início do Main -->
+    <main role="main" class="container">
+        <!-- Início do Cabeçalho -->
+        <header>
+            <div class="row flex-nowrap justify-content-between align-items-center">
+                <div class="col-4 pt-1">
+                    <a class="navbar-brand" href="#">
+                        <img src="/main/images/unifor-logo.png" height="30" alt="Logo Unifor" loading="lazy" />
+                    </a>
+                    <a class="navbar-brand h5" href="#">Início</a>
+                    <a class="navbar-brand h5" href="#">Sobre</a>
+                </div>
+                <div class="col-4 text-center">
+                    <a class="blog-header-logo text-dark" href="#">Blog Unifor</a>
+                </div>
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                    <a class="text-muted" href="#">
+                    </a>
+                    <a class="btn btn-sm btn-outline-secondary" href="#contato">Contato</a>
+                </div>
+            </div>
+        </header>
+        <!-- Final do Cabeçalho -->
 
+        <!-- Início do Carrousel -->
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="first-slide" src="/main/images/unifor-carrousel-1.png" alt="Primeiro slide">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <h1></h1>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="second-slide" src="/main/images/unifor-carrousel-2.png" alt="Segundo slide">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <h1></h1>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="third-slide" src="/main/images/unifor-carrousel-3.png" alt="Terceiro slide">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <h1></h1>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Voltar</span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Avançar</span>
+            </a>
+        </div>
+        <!-- Fim do Carrousel -->
+
+        <!-- Início das Postagens -->
+        <div class="album py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
+                            <img class="card-img-top" src="/main/images/unifor-thumb-1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <p class="card-text">Processo seletivo de Medicina da Unifor usará notas do Enem.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
+                                    </div>
+                                    <small class="text-muted">Blog Unifor</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
+                            <img class="card-img-top" src="/main/images/unifor-thumb-2.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <p class="card-text"></p>
+                                <p class="card-text">Unifor suspende aulas presenciais até 4 de maio e concede redução
+                                    de 30% na mensalidade de abril a todos os alunos</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
+                                    </div>
+                                    <small class="text-muted">Blog Unifor</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
+                            <img class="card-img-top" src="/main/images/unifor-thumb-3.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <p class="card-text">Biblioteca da Unifor lança campanha para devolução de livros
+                                    emprestados.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
+                                    </div>
+                                    <small class="text-muted">Blog Unifor</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Final das Postagens-->
+        
+        <!-- Início do Formulário -->
+        <div class="container" id="contato">
+            <div class="row">
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-8">
+                    <form>
+                        <!-- Nome input -->
+                        <div class="form-outline mb-4">
+                            <input type="text" id="form4Example1" class="form-control" />
+                            <label class="form-label" for="form4Example1">Nome</label>
+                        </div>
+
+                        <!-- E-mail input -->
+                        <div class="form-outline mb-4">
+                            <input type="email" id="form4Example2" class="form-control" />
+                            <label class="form-label" for="form4Example2">E-mail</label>
+                        </div>
+
+                        <!-- Mensagem input -->
+                        <div class="form-outline mb-4">
+                            <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                            <label class="form-label" for="form4Example3">Mensagem</label>
+                        </div>
+
+                        <!-- Enviar button -->
+                        <button type="submit" class="btn btn-primary btn-block mb-4">Enviar</button>
+                    </form>
+                </div>
+                <div class="col-md-2">
+                </div>
+            </div>
+        </div>
+        <!-- Final do Formulário -->
+    </main>
+    <!-- Final do Main -->
+
+    <!-- Início do Footer -->
+    <footer class="text-muted">
+        <div class="container">
+            <p class="float-right">
+                <a href="#">Voltar ao topo</a>
+            </p>
+            <p>Fundação Edson Queiroz - Universidade de Fortaleza</p>
+            <p>Central de Atendimento: (85) 3477-3000</p>
+            <p>Endereço: Av. Washington Soares, 1321 - Edson Queiroz - CEP 60811-905 - Fortaleza-CE Brasil.</p>
+        </div>
+    </footer>
+    <!-- Final do Footer -->
+
+    <!-- Principal JavaScript do Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script>
+        window.jQuery || document.write('<script src="/main/js/jquery-3.3.1.slim.min.js"><\/script>')
+    </script>
+    <script src="/main/js/popper.min.js"></script>
+    <script src="/main/js/bootstrap.min.js"></script>
+    <script src="/main/js/holder.min.js"></script>
 </body>
 
 </html>
