--- a/formulario.html
+++ b/formulario.html
@@ -7,26 +7,109 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Referências -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/album.css" rel="stylesheet">
+    <link href="./css/carousel.css" rel="stylesheet">
+    <link href="./css/blog.css" rel="stylesheet">
     <!-- Título -->
-    <title>Formulário</title>
+    <title>Blog Unifor</title>
+    <link rel="shortcut icon" href="./images/unifor-favicon.png" />
 </head>
 
 <body>
-<!-- Logo/Navbar -->
-<div class="topnav">
-    <a href="index.html">Início</a>
-    <a class="active" href="formulario.html">Formulário</a>
-    <a href="informacao.html">Informações</a>
-    <a href="sobre.html">Sobre</a>
-    <form>
-        <input type="search" name="search" placeholder="Pesquisar..">
-      </form>
-</div>
+    <!-- Início do Main -->
+    <main role="main" class="container">
+        <!-- Início do Cabeçalho -->
+        <header>
+            <div class="row flex-nowrap justify-content-between align-items-center">
+                <div class="col-4 pt-1">
+                    <a class="navbar-brand" href="#">
+                        <img src="./images/unifor-logo.png" height="30" alt="Logo Unifor" loading="lazy" />
+                    </a>
+                    <a class="navbar-brand h5" href="./index.html">Início</a>
+                    <a class="navbar-brand h5" href="#">Sobre</a>
+                </div>
+                <div class="col-4 text-center">
+                    <a class="blog-header-logo text-dark" href="#">Blog Unifor</a>
+                </div>
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                    <a class="text-muted" href="#">
+                    </a>
+                    <a class="btn btn-sm btn-outline-secondary" href="./formulario.html">Contato</a>
+                </div>
+            </div>
+        </header>
+        <!-- Final do Cabeçalho -->
+
+        <!-- Início Texto -->
+        </br>
+        <div class="container centralizar">
+            <h3 class="negrito">Entre em Contato</h1>
+            <h5>Olá, seja bem-vindo à Universidade de Fortaleza.  Em que podemos lhe ajudar?</h5>
+        </div>
+        </br>
+
+        <!-- Início do Formulário -->
+        <div class="container" id="contato">
+            <div class="row">
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-8">
+                    <form>
+                        <!-- Nome input -->
+                        <div class="form-outline mb-4">
+                            <label class="form-label" for="form4Example1">Nome</label>
+                            <input type="text" id="form4Example1" class="form-control" />
+                        </div>
+
+                        <!-- E-mail input -->
+                        <div class="form-outline mb-4">
+                            <label class="form-label" for="form4Example2">E-mail</label>
+                            <input type="email" id="form4Example2" class="form-control" />
+                        </div>
+
+                        <!-- Mensagem input -->
+                        <div class="form-outline mb-4">
+                            <label class="form-label" for="form4Example3">Mensagem</label>
+                            <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                        </div>
+
+                        <!-- Enviar button -->
+                        <button type="submit" class="btn btn-primary btn-block mb-4">Enviar</button>
+                    </form>
+                </div>
+                <div class="col-md-2">
+                </div>
+            </div>
+        </div>
+        <!-- Final do Formulário -->
+
+    </main>
+    <!-- Final do Main -->
+
+    <!-- Início do Footer -->
+    <footer class="text-muted">
+        <div class="container">
+            <p class="float-right">
+                <a href="#">Voltar ao topo</a>
+            </p>
+            <p>Fundação Edson Queiroz - Universidade de Fortaleza</p>
+            <p>Central de Atendimento: (85) 3477-3000</p>
+            <p>Endereço: Av. Washington Soares, 1321 - Edson Queiroz - CEP 60811-905 - Fortaleza-CE Brasil.</p>
+        </div>
+    </footer>
+    <!-- Final do Footer -->
+
+    <!-- Principal JavaScript do Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script>
+        window.jQuery || document.write('<script src="/main/js/jquery-3.3.1.slim.min.js"><\/script>')
+    </script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/holder.min.js"></script>
 </body>
 
 </html>
