--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Referências -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/album.css" rel="stylesheet">
-    <link href="/css/carousel.css" rel="stylesheet">
-    <link href="/css/blog.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/album.css" rel="stylesheet">
+    <link href="./css/carousel.css" rel="stylesheet">
+    <link href="./css/blog.css" rel="stylesheet">
     <!-- Título -->
     <title>Blog Unifor</title>
-    <link rel="shortcut icon" href="/images/unifor-favicon.png" />
+    <link rel="shortcut icon" href="./images/unifor-favicon.png" />
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="col-4 pt-1">
                     <a class="navbar-brand" href="#">
-                        <img src="/images/unifor-logo.png" height="30" alt="Logo Unifor" loading="lazy" />
+                        <img src="./images/unifor-logo.png" height="30" alt="Logo Unifor" loading="lazy" />
                     </a>
                     <a class="navbar-brand h5" href="#">Início</a>
                     <a class="navbar-brand h5" href="#">Sobre</a>
@@ -35,7 +35,7 @@
                 <div class="col-4 d-flex justify-content-end align-items-center">
                     <a class="text-muted" href="#">
                     </a>
-                    <a class="btn btn-sm btn-outline-secondary" href="#contato">Contato</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="./formulario.html">Contato</a>
                 </div>
             </div>
         </header>
@@ -50,7 +50,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="/images/unifor-carrousel-1.png" alt="Primeiro slide">
+                    <img class="first-slide" src="./images/unifor-carrousel-1.png" alt="Primeiro slide">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1></h1>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="/images/unifor-carrousel-2.png" alt="Segundo slide">
+                    <img class="second-slide" src="./images/unifor-carrousel-2.png" alt="Segundo slide">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1></h1>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="/images/unifor-carrousel-3.png" alt="Terceiro slide">
+                    <img class="third-slide" src="./images/unifor-carrousel-3.png" alt="Terceiro slide">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1></h1>
@@ -94,12 +94,15 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="/images/unifor-thumb-1.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="./images/unifor-thumb-1.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Processo seletivo de Medicina da Unifor usará notas do Enem.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary"><a
+                                                target="_blank"
+                                                href="https://diariodonordeste.verdesmares.com.br/metro/processo-seletivo-de-medicina-da-unifor-usara-notas-do-enem-1.2238368">Ver</a></button>
+
                                     </div>
                                     <small class="text-muted">Blog Unifor</small>
                                 </div>
@@ -108,14 +111,16 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="/images/unifor-thumb-2.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="./images/unifor-thumb-2.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text"></p>
                                 <p class="card-text">Unifor suspende aulas presenciais até 4 de maio e concede redução
                                     de 30% na mensalidade de abril a todos os alunos</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary"><a
+                                                target="_blank"
+                                                href="https://www.unifor.br/-/unifor-suspende-aulas-presenciais-ate-4-de-maio-e-concede-reducao-de-30-na-mensalidade-de-abril-a-todos-os-alunos">Ver</a></button>
                                     </div>
                                     <small class="text-muted">Blog Unifor</small>
                                 </div>
@@ -124,13 +129,15 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="/images/unifor-thumb-3.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="./images/unifor-thumb-3.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Biblioteca da Unifor lança campanha para devolução de livros
                                     emprestados.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary"><a
+                                                target="_blank"
+                                                href="https://www.unifor.br/-/biblioteca-da-unifor-lanca-campanha-para-devolucao-de-livros-emprestados">Ver</a></button>
                                     </div>
                                     <small class="text-muted">Blog Unifor</small>
                                 </div>
@@ -141,41 +148,43 @@
             </div>
         </div>
         <!-- Final das Postagens-->
-        
-        <!-- Início do Formulário -->
-        <div class="container" id="contato">
-            <div class="row">
-                <div class="col-md-2">
-                </div>
-                <div class="col-md-8">
-                    <form>
-                        <!-- Nome input -->
-                        <div class="form-outline mb-4">
-                            <input type="text" id="form4Example1" class="form-control" />
-                            <label class="form-label" for="form4Example1">Nome</label>
-                        </div>
 
-                        <!-- E-mail input -->
-                        <div class="form-outline mb-4">
-                            <input type="email" id="form4Example2" class="form-control" />
-                            <label class="form-label" for="form4Example2">E-mail</label>
-                        </div>
-
-                        <!-- Mensagem input -->
-                        <div class="form-outline mb-4">
-                            <textarea class="form-control" id="form4Example3" rows="4"></textarea>
-                            <label class="form-label" for="form4Example3">Mensagem</label>
-                        </div>
-
-                        <!-- Enviar button -->
-                        <button type="submit" class="btn btn-primary btn-block mb-4">Enviar</button>
-                    </form>
-                </div>
-                <div class="col-md-2">
-                </div>
-            </div>
+        <!-- Início Tabela Horários -->
+        <div>
+            <h3 class="centralizar negrito">Horários das Aulas</h3></br>
+            <table class="table">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Manhã</th>
+                        <th scope="col">Tarde</th>
+                        <th scope="col">Noite</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">AB</th>
+                        <td>07:30 - 09:10</td>
+                        <td>13:30 - 15:00</td>
+                        <td>19:00 - 20:40</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">CD</th>
+                        <td>09:30 - 11:10</td>
+                        <td>15:30 - 17:00</td>
+                        <td>21:00 - 22:40</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">EF</th>
+                        <td>11:20 - 13:00</td>
+                        <td>17:20 - 19:00</td>
+                        <td>-</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        <!-- Final do Formulário -->
+        <!-- Final Tabela Horários -->
+
     </main>
     <!-- Final do Main -->
 
@@ -199,9 +208,9 @@
     <script>
         window.jQuery || document.write('<script src="/main/js/jquery-3.3.1.slim.min.js"><\/script>')
     </script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/holder.min.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/holder.min.js"></script>
 </body>
 
 </html>
