criacao da pagina sobre

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img src="./images/unifor-logo.png" height="30" alt="Logo Unifor" loading="lazy" />
                     </a>
                     <a class="navbar-brand h5" href="#">Início</a>
-                    <a class="navbar-brand h5" href="#">Sobre</a>
+                    <a class="navbar-brand h5" href="./sobre.html">Sobre</a>
                 </div>
                 <div class="col-4 text-center">
                     <a class="blog-header-logo text-dark" href="#">Blog Unifor</a>
